@@ -20,7 +20,7 @@
     android:id="@+id/logo"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
-    android:src="@drawable/sqlite_icon"
+    android:src="@drawable/large_icon"
     android:gravity="center_vertical"/>  
   <Button
     android:id="@+id/Open"
